@@ -61,6 +61,9 @@ public:
     // The stream will write data either to the provided string or to an
     // internal string which can be retrieved using GetString()
     wxStringOutputStream(wxString *pString = NULL)
+#if wxUSE_UNICODE_WCHAR
+        : m_unconv(0)
+#endif // wxUSE_UNICODE_WCHAR
     {
         m_str = pString ? pString : &m_strInternal;
         m_pos = m_str->length() / sizeof(wxChar);
@@ -89,6 +92,11 @@ private:
 #else
     wxMBConv m_conv;
 #endif
+
+#if wxUSE_UNICODE_WCHAR
+    // unconverted data from the last call to OnSysWrite()
+    wxMemoryBuffer m_unconv;
+#endif // wxUSE_UNICODE_WCHAR
 
     DECLARE_NO_COPY_CLASS(wxStringOutputStream)
 };
